--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
 			<artifactId>stripe-java</artifactId>
 			<version>28.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.29.6</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
