--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
 			<version>2.29.6</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.3.0</version>
+		</dependency>
 
 	</dependencies>
 
