--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=back
 #spring.datasource.url=jdbc:mysql://localhost:3306/storedb
 spring.datasource.url=jdbc:mysql://localhost:3306/storedb2
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=St080142.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
